--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.ipa</string>
+					<string>https://github.com/zhangbiaoBrian/0308/blob/master/oneID.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
